syntax = "proto3";

option go_package="./api";

package api;

service CarRentalServices {
    rpc GetCars(GetCarsRequest) returns (GetCarsResponse);
    rpc CreateCar(Car) returns (Car);
    rpc GetCarById(Car) returns (Car);
    rpc UpdateCar(Car) returns (Car);
    rpc DeleteCar(Car) returns (Car);

    rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
    rpc CreateOrder(Order) returns (Order);
    rpc GetOrderById(Order) returns (Order);
    rpc UpdateOrder(Order) returns (Order);
    rpc DeleteOrder(Order) returns (Order);
}

message Car{
    int64 id = 1;
    string name = 2;
    double day_rate = 3;
    double month_rate = 4;
    string image = 5;
}

message GetCarsRequest {
    string search = 1;
    int32 page = 2;
    int32 limit = 3;
}

message GetCarsResponse {
    repeated Car data = 1;
    int32 page = 2;
    int32 limit = 3;
    int32 total = 4;
}

message Order{
    int64 id = 1;
    int64 car_id = 2;
    int64 order_date = 3;
    int64 pickup_date = 4;
    int64 dropoff_date = 5;
    string pickup_location = 6;
    string dropoff_location = 7;
}

message GetOrdersRequest {
    string search = 1;
    int32 page = 2;
    int32 limit = 3;
}

message GetOrdersResponse {
    repeated Order data = 1;
    int32 page = 2;
    int32 limit = 3;
    int32 total = 4;
}